# moby-name-gen-rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
